--- a/src/main/resources/templates/employees/employees-form.html
+++ b/src/main/resources/templates/employees/employees-form.html
@@ -24,6 +24,8 @@
         <form   action="#"  th:action="@{/employees/save}"
                             th:object="${employee}"
                             method="POST">
+            <!-- Add a hidden for field to handle the update -->
+            <input  type="hidden" th:field="*{id}" />
             
             <input  type="text" th:field="*{firstName}"
                     class="form-control mb-4 col-4" placeholder="First name">
